# FastVectorFields

./: CMakeLists.txt  LICENSE  NumericalConstants.h  README.md  main.cpp
ComputationModels/: AbstractComputationModel.cpp  AbstractComputationModel.h  MultiThreadedComputationModel.h
FieldBase/: AbstractField2D.cpp  AbstractField2D.h  AbstractField2D.hpp  AbstractField3D.cpp  AbstractField3D.h  AbstractField3D.hpp
Interpolation/: Interpolation.cpp  Interpolation.h  RBFInterpolator2D.cpp  RBFInterpolator2D.h  RBFInterpolator2D.hpp  RBFInterpolator3D.cpp  RBFInterpolator3D.h  RBFInterpolator3D.hpp  Solvers.hpp
ScalarFields/: ScalarField2D.cpp  ScalarField2D.h  ScalarField2D.hpp  ScalarField3D.cpp  ScalarField3D.h  ScalarField3D.hpp
Scripts/: scalar_field_visualizer.py  scalar_field_visualizer_3d.py  vector_field_visualizer.py  vector_field_visualizer_3d.py
VectorFields/: VectorField2D.cpp  VectorField2D.h  VectorField2D.hpp  VectorField3D.cpp  VectorField3D.h  VectorField3D.hpp
Vectors/: Vector2D.cpp  Vector2D.h  Vector2D.hpp  Vector3D.cpp  Vector3D.h  Vector3D.hpp  Vector4D.cpp  Vector4D.hpp
tests/: MainTest.cpp  MultiThreadedTest.cpp  VectorFieldTest.cpp  VectorTest.cpp
